# paperswithcode-nigiri

./: .env.example  Dockerfile  README.md  compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
api/: .env.example  Dockerfile  pyproject.toml
api/app/: const.py  main.py
api/app/routers/: paper.py  summary.py
api/app/schemas/: paper.py  summary.py
api/app/services/: formatter.py  searcher.py  summarizer.py
paperswithcode_nigiri/: const.py  main.py
paperswithcode_nigiri/routers/: paper.py
paperswithcode_nigiri/services/: notifier.py  searcher.py  summarizer.py
slack/: .env.example  Dockerfile  bot.py  pyproject.toml
